[package]
name = "fsplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
owo-colors = "3.5.0"
serde_json = "1.0.89"
cfonts = "1"
anyhow = "1.0"
console = "0.15.2"
indicatif = "0.17.2"
dialoguer = {version = "0.10.2", features = ["fuzzy-select"]}
ctrlc = "3.2.3"
include_dir = "0.7.3"

[profile.release]
opt-level = 3
